objects/L_D_Ops__c.object
<CustomObject>
    <fields>
        <fullName>Average_Score__c</fullName>
        <formula>(Week_1_Score__c + Week_2_Score__c + Week_3_Score__c + Week_4_Score__c + Week_5_Score__c + Week_6_Score__c + Week_7_Score__c + Week_8_Score__c +
Week_9_Score__c+Week_10_Score__c+Week_11_Score__c+Week_12_Score__c)/
(Trainee_Count__c*(IF(Week_1_Score__c =0,0,1) + IF(Week_2_Score__c =0,0,1) + IF(Week_3_Score__c =0,0,1) + IF(Week_4_Score__c =0,0,1) + IF(Week_5_Score__c =0,0,1) + IF(Week_6_Score__c =0,0,1) + IF(Week_7_Score__c =0,0,1) + IF(Week_8_Score__c =0,0,1)
+IF(Week_9_Score__c =0,0,1) +IF(Week_10_Score__c =0,0,1)+IF(Week_11_Score__c =0,0,1)+IF(Week_12_Score__c =0,0,1))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Score %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Batch_End_Date__c</fullName>
        <label>Batch End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Batch_Start_Date__c</fullName>
        <label>Batch Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Batch_Status__c</fullName>
        <label>Batch Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In progress</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>Mentoring</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>COA_Session_Meeting_Planner_1_0_1__c</fullName>
        <label>COA Session &amp; Meeting Planner 1-0-1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSPL_Access__c</fullName>
        <label>CSPL Access</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Request Raised</fullName>
                </value>
                <value>
                    <fullName>Pending from GSO</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CS_Hiring_Managers_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CS Hiring Managers Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>L_D_Ops1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Completed_on__c</fullName>
        <label>Completed on</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <inlineHelpText>to be mandatory if selected No in "New hire sheet filled?" field</inlineHelpText>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EB_Evaluation_Done__c</fullName>
        <label>EB Evaluation Done</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expectation_setting_with_L_D_Manager__c</fullName>
        <label>Expectation setting with L&amp;D Manager</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HR_Orientation_NHO_Finance__c</fullName>
        <label>HR Orientation(NHO &amp;Finance)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Done</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Highlight_challenges_if_any__c</fullName>
        <label>Highlight challenges if any</label>
        <length>400</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Infrastructure_In_terms_of_no_of_system__c</fullName>
        <label>Infrastructure(In terms of no. of system</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Intro_to_Training_constitution__c</fullName>
        <label>Intro to Training constitution</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Signed</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LOB__c</fullName>
        <label>LOB</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Event Phones</fullName>
                </value>
                <value>
                    <fullName>Event Phones and EB</fullName>
                </value>
                <value>
                    <fullName>EB only</fullName>
                </value>
                <value>
                    <fullName>Crowd Compass</fullName>
                </value>
                <value>
                    <fullName>CSN</fullName>
                </value>
                <value>
                    <fullName>Inquisium</fullName>
                </value>
                <value>
                    <fullName>Soft Skills</fullName>
                </value>
                <value>
                    <fullName>Adhoc Training</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HQ</fullName>
                </value>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>Atlanta</fullName>
                </value>
                <value>
                    <fullName>London</fullName>
                </value>
                <value>
                    <fullName>Portland</fullName>
                </value>
                <value>
                    <fullName>Santa Barbara</fullName>
                </value>
                <value>
                    <fullName>Austin</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Meeting_Room_Name__c</fullName>
        <label>Meeting Room Name</label>
        <length>400</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Meeting_room_Booked__c</fullName>
        <label>Meeting room Booked?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Not Available</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_Hire_sheet_filled__c</fullName>
        <label>New Hire sheet filled?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Office_Tour__c</fullName>
        <label>Office Tour</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Overview_on_GSO__c</fullName>
        <label>Overview on GSO</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Done</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Presentation_Date__c</fullName>
        <label>Presentation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Quality_Session_Completed__c</fullName>
        <label>Quality Session Completed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SD_Invigilator_required__c</fullName>
        <label>SD Invigilator required?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SF_Timer_Ortoo_Access_request_status__c</fullName>
        <label>SF/ Timer/Ortoo Access request status ?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Request Raised</fullName>
                </value>
                <value>
                    <fullName>Pending from GSO</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Seats__c</fullName>
        <label>Seats</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Request Raised</fullName>
                </value>
                <value>
                    <fullName>Pending from GSO</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Soft_Skill_session__c</fullName>
        <label>Soft Skill session</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stationary_arrangements__c</fullName>
        <label>Stationary arrangements</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Request Raised</fullName>
                </value>
                <value>
                    <fullName>Ordered</fullName>
                </value>
                <value>
                    <fullName>Pending from vendor</fullName>
                </value>
                <value>
                    <fullName>Handed over to trainer</fullName>
                </value>
                <value>
                    <fullName>Handed over to Trainee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Throughput__c</fullName>
        <formula>(Trainees_with_completed_status__c / Total_Batch_Size__c) * 100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Throughput</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Batch_Size__c</fullName>
        <label>Total Batch Size</label>
        <summaryForeignKey>Trainee__c.L_D_Ops__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Trainee_Count__c</fullName>
        <label>Trainee Count</label>
        <summaryForeignKey>Trainee__c.L_D_Ops__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Trainees_with_completed_status__c</fullName>
        <label>Trainees with completed status</label>
        <summaryFilterItems>
            <field>Trainee__c.Trainee_Status__c</field>
            <operation>equals</operation>
            <value>Classroom Completed, Fast Track – Classroom: Completed</value>
        </summaryFilterItems>
        <summaryForeignKey>Trainee__c.L_D_Ops__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Trainer_Arranged__c</fullName>
        <label>Trainer Arranged</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Trainer_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Trainer Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>L_D_Ops</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Training_Binders_Status__c</fullName>
        <label>Training Binders Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Request Raised</fullName>
                </value>
                <value>
                    <fullName>Ordered</fullName>
                </value>
                <value>
                    <fullName>Pending from vendor</fullName>
                </value>
                <value>
                    <fullName>Handed over to trainer</fullName>
                </value>
                <value>
                    <fullName>Handed over to Trainee</fullName>
                </value>
                <value>
                    <fullName>Not required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Training_type__c</fullName>
        <label>Training type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Classroom</fullName>
                </value>
                <value>
                    <fullName>Remote</fullName>
                </value>
                <value>
                    <fullName>Classroom + Remote</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Week_10_Average__c</fullName>
        <formula>Week_10_Score__c/ Trainee_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Week 10 Average</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Week_10_Score__c</fullName>
        <label>Week 10 Score</label>
        <summarizedField>Trainee__c.Week_10_Score__c</summarizedField>
        <summaryForeignKey>Trainee__c.L_D_Ops__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Week_11_Average__c</fullName>
        <formula>Week_11_Score__c/ Trainee_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Week 11 Average</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Week_11_Score__c</fullName>
        <label>Week 11 Score</label>
        <summarizedField>Trainee__c.Week_11_Score__c</summarizedField>
        <summaryForeignKey>Trainee__c.L_D_Ops__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Week_12_Average__c</fullName>
        <formula>Week_12_Score__c/ Trainee_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Week 12 Average</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Week_12_Score__c</fullName>
        <label>Week 12 Score</label>
        <summarizedField>Trainee__c.Week_12_Score__c</summarizedField>
        <summaryForeignKey>Trainee__c.L_D_Ops__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>of_Trainees__c</fullName>
        <label># of Trainees Left</label>
        <summaryFilterItems>
            <field>Trainee__c.Trainee_Status__c</field>
            <operation>equals</operation>
            <value>Resigned, Asked to Leave, Absconding</value>
        </summaryFilterItems>
        <summaryForeignKey>Trainee__c.L_D_Ops__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>L&amp;D Ops</label>
    <nameField>
        <label>L&amp;D Ops Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>L&amp;D Ops</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <validationRules>
        <fullName>Mandatory_Due_Date</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISBLANK(Due_Date__c), ISPICKVAL(New_Hire_sheet_filled__c,'No'))</errorConditionFormula>
        <errorMessage>Please Fill The Due Date</errorMessage>
    </validationRules>
</CustomObject>